--- a/xss.htm
+++ b/xss.htm
@@ -1,9 +1,12 @@
 <html>
+	<head>
+		<title>HTML Encoding and Base64-Konverter</title>
+	</head>
 <body>
   <form name="xss" action="">
-		<b>XSS Input:</b>
+		<b>HTML Input:</b>
 		<ul>
-			<textarea name="ascii" cols=80 rows=4>XSS Code hier her!</textarea>
+			<textarea name="ascii" cols=80 rows=4>HTML Code hier her!</textarea>
 			<br><input type="button" value="Encode" onclick="encode()">
 			<input type="reset" value="Reset">
 		</ul>
